<resources>
    <string name="app_name">Marguerite-Bourgeoys</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_account">New Account</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="ok">OK</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="title">Title</string>
    <string name="mes_livres">Mes Livres</string>
    <string name="auteur">Auteur</string>
    <string name="retourne">Retourne</string>
    <string name="renouveler">Renouveler</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="title">Title</string>
    <string name="rdv_livre_rare">RDV Livre Rare</string>
    <string name="auteur">Auteur</string>
    <string name="retourne">Retourne</string>
    <string name="renouveler">Renouveler</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="rechercher">Rechercher</string>
    <string name="meslivres">MesLivres</string>
    <string name="todo">TODO</string>
    <string name="rdv_livre_rare">RDV Livre Rare</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="rdv_livre_rare">RDV Livre Rare</string>
    <string name="meslivres">MesLivres</string>
    <string name="rechercher">Rechercher</string>
    <string name="rechercher">Rechercher</string>
    <string name="maison_d_edition">Maison d\'edition</string>
    <string name="ann_e">Année</string>
    <string name="title">Title</string>
    <string name="l_auteur">L\'auteur</string>
    <string name="textview">TextView</string>
    <string name="title">Title</string>
    <string name="auteur">Auteur</string>
    <string name="ann_e">Année</string>
    <string name="reserver">Reserver</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="rdv">RDV</string>
</resources>
