<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.grasset.fernando.marguerite_bourgeoys.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="148dp"
            android:gravity="center"
            app:srcCompat="@android:drawable/btn_dialog" android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/usernameChamp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:scrollHorizontally="false" />

        <EditText
            android:id="@+id/passwordChamp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/resetPasswordButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:text="@string/reset_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="174dp"
            android:layout_marginTop="75dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/newAccountButton"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="125dp"
                android:text="@string/new_account" />

            <ImageButton
                android:id="@+id/helpButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="175dp"
                app:srcCompat="@android:drawable/ic_menu_help" android:contentDescription="@string/todo" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
