<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.grasset.fernando.marguerite_bourgeoys.Rechercher">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rechercher"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title" />

            <RadioButton
                android:id="@+id/radioButtonAuteur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/l_auteur" />

            <RadioButton
                android:id="@+id/radioButtonAnee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ann_e" />

            <RadioButton
                android:id="@+id/radioButtonMaisonEdition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/maison_d_edition" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/rechercheBar"
                android:layout_width="318dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:labelFor="@+id/rechercheBar" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                app:srcCompat="@android:drawable/btn_plus" android:contentDescription="@string/todo" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tableTitleRechercher"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/title" />

                <TextView
                    android:id="@+id/tableAuteurRechercher"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/auteur" />

                <TextView
                    android:id="@+id/tableAneeRechercher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/ann_e" />

                <TextView
                    android:id="@+id/tableReserverRechercher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/reserver" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tableTitle1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview" />

                <TextView
                    android:id="@+id/tableAuteur1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview" />

                <TextView
                    android:id="@+id/tableRetourne1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview" />

                <ImageButton
                    android:id="@+id/renouvelerButton1"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="65dp"
                    android:layout_marginEnd="50dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@android:drawable/btn_star_big_on" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tableTitle2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview" />

                <TextView
                    android:id="@+id/tableAuteur2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview" />

                <TextView
                    android:id="@+id/tableRetourne2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview" />

                <ImageButton
                    android:id="@+id/renouvelerButton2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="65dp"
                    android:layout_marginEnd="50dp"
                    app:srcCompat="@android:drawable/btn_star_big_on" android:contentDescription="@string/todo" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tableTitle3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview" />

                <TextView
                    android:id="@+id/tableAuteur3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview" />

                <TextView
                    android:id="@+id/tableRetourne3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview" />

                <ImageButton
                    android:id="@+id/renouvelerButton3"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="65dp"
                    android:layout_marginEnd="50dp"
                    app:srcCompat="@android:drawable/btn_star_big_on" android:contentDescription="@string/todo" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="37dp">

                <TextView
                    android:id="@+id/tableTitle4"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview" />

                <TextView
                    android:id="@+id/tableAuteur4"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview" />

                <TextView
                    android:id="@+id/tableRetourne4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview" />

                <ImageButton
                    android:id="@+id/renouvelerButton4"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="65dp"
                    android:layout_marginEnd="50dp"
                    app:srcCompat="@android:drawable/btn_star_big_on" android:contentDescription="@string/todo" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="37dp">

                <TextView
                    android:id="@+id/tableTitle5"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview" />

                <TextView
                    android:id="@+id/tableAuteur5"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview" />

                <TextView
                    android:id="@+id/tableRetourne5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview" />

                <ImageButton
                    android:id="@+id/renouvelerButton5"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="65dp"
                    android:layout_marginEnd="50dp"
                    app:srcCompat="@android:drawable/btn_star_big_on" android:contentDescription="@string/todo" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="37dp">

                <TextView
                    android:id="@+id/tableTitle6"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview" />

                <TextView
                    android:id="@+id/tableAuteur6"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview" />

                <TextView
                    android:id="@+id/tableRetourne6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview" />

                <ImageButton
                    android:id="@+id/renouvelerButton6"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="65dp"
                    android:layout_marginEnd="50dp"
                    app:srcCompat="@android:drawable/btn_star_big_on" android:contentDescription="@string/todo"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="37dp">

                <TextView
                    android:id="@+id/tableTitle7"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview" />

                <TextView
                    android:id="@+id/tableAuteur7"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview" />

                <TextView
                    android:id="@+id/tableRetourne7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview" />

                <ImageButton
                    android:id="@+id/renouvelerButton7"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="65dp"
                    android:layout_marginEnd="50dp"
                    app:srcCompat="@android:drawable/btn_star_big_on" android:contentDescription="@string/todo"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="37dp">

                <TextView
                    android:id="@+id/tableTitle8"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview" />

                <TextView
                    android:id="@+id/tableAuteur8"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview" />

                <TextView
                    android:id="@+id/tableRetourne8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview" />

                <ImageButton
                    android:id="@+id/renouvelerButton8"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="65dp"
                    android:layout_marginEnd="50dp"
                    app:srcCompat="@android:drawable/btn_star_big_on" android:contentDescription="@string/todo"/>
            </TableRow>

        </TableLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rdv_livre_rare" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meslivres" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rechercher" />

        </RadioGroup>

        <ImageButton
            android:id="@+id/helpButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="175dp"
            app:srcCompat="@android:drawable/ic_menu_help" android:contentDescription="@string/todo" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
